--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,20 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
+
+.color-primary {
+  color: #23be0a;
+}
+.bg-c-primary {
+  background-color: #23be0a;
+  color: white;
+}
+.color-secondary {
+  color: #59c6d2;
+}
+.bg-c-secondary {
+  background-color: #59c6d2;
+  color: white;
+}
