--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-#root {
+h1,
+h2,
+h3,
+h4 {
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
 }
